tests/fail/if_then_else_without_integer_condition.tig
if "abc" then 0 else 1
