tests/fail/if_then_else_without_integer_condition.err
Semantic Error: The condition of the if-then-else statement at line 1 does not return an integer value.
